--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^11.0.3",
     "recharts": "^2.12.7"
